2005-01-31  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/msgs/es_ES.msg: Added more localization for Spanish
	Spanish. [Bug 1111213]

2005-01-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/configure, unix/tcl.m4: add solaris 64-bit gcc build
	support. [Bug 1021871]

2005-01-25  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXInit.c (TkpInit): set tcl_interactive to 1 to show
	console at startup instead of directly calling [console show].
	
	* unix/tcl.m4 (Darwin): fixed bug with static build linking to
	dynamic library in /usr/lib etc instead of linking to static library
	earlier in search path. [Tcl Bug 956908]
	Removed obsolete references to Rhapsody. 
	* unix/configure: autoconf-2.13

2005-01-18  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/demos/menu.tcl: Reworked to make dialogs children of the
	demo widget so that they are properly visible. Issue reported by
	Keith Nash <k.j.nash@usa.net>

2005-01-14  Joe English  <jenglish@users.sourceforge.net>
	* unix/tkUnixWm.c: Sync with CVS HEAD (r1.47):
	Fixes: #959973 "wm title bug" (support Unicode titles)
	Fixes: #742882 "Potential division by zero in gridded wm geometry"
	Use Tcl_GetTime instead of TclpGetTime [#874745]
	Use Tcl_Panic() instead of "panic" [#865264]
	Fixes: #632816 "cannot remove transient"
	Fixes: #568861 "Fix for wm minsize and maxsize commands"
	* tests/unixWm.test, tests/wm.test: Updated test suite for 
	#632816 (unixWm-37.3, unixWm-37.4, wm-grid-1.11, wm-grid-1.12)
	and #742882 (unixWm-20.9, unixWm-20.11).

2005-01-11  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkObj.c (TkParsePadAmount):
	* generic/tkPack.c: Moved function to tkObj.c and rewrote so that it
	takes advantage of Tcl_Objs properly and cannot leave objects in an
	inconsistent state. [Bug 1098779]

2005-01-07  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkWindow.c (GetScreen): Make sure the result is reset on
	all error paths to stop strange errors. [Bug 697915]